# audio-plugins

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.json  plugins.ts
compressor/: .clang-format  .gitignore  CMakeLists.txt  README.md  compressor-plugin.ts
compressor/include/: compressor_clap.h  compressor_processor.h  compressor_vst.h  simd_utils.h
compressor/src/: audioeffect.cpp  audioeffectx.cpp  compressor_clap.cc  compressor_processor.cc  compressor_vst.cc  simd_utils.cc
compressor/tests/: test_clap_plugin.cc  test_compressor_processor.cc  test_simd_utils.cc
delay/: CMakeLists.txt  README.md  delay-plugin.ts
delay/include/: delay_clap.h  delay_processor.h
delay/src/: delay_clap.cc  delay_processor.cc
delay/tests/: test_clap_plugin.cc
eq/: CMakeLists.txt  README.md  eq-plugin.ts
eq/include/: eq_clap.h  eq_processor.h
eq/src/: eq_clap.cc  eq_processor.cc
eq/tests/: test_clap_plugin.cc  test_eq_processor.cc
eq/web-ui/: README.md  eq-editor.d.ts.map  eq-editor.ts  index.html  package-lock.json  package.json  tsconfig.json
limiter/: CMakeLists.txt  README.md  limiter-plugin.ts
limiter/include/: limiter_clap.h  limiter_processor.h  simd_utils.h
limiter/src/: limiter_clap.cc  limiter_processor.cc  simd_utils.cc
limiter/tests/: test_clap_plugin.cc
scripts/: generate-from-annotations.js
ts/: README.md  audio-plugin.ts  compressor-plugin.ts  delay-plugin.ts  eq-plugin.ts  limiter-plugin.ts  plugins.ts
